# calce

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  tasks.py
.claude/skills/new-calculation/: SKILL.md
.claude/skills/review/: SKILL.md
benchmarks/: RESULTS.md
benchmarks/aggregation/: Cargo.toml
benchmarks/aggregation/src/: main.rs
benchmarks/backtest/: Cargo.toml
benchmarks/backtest/src/: main.rs
benchmarks/checked-arith/: Cargo.toml
benchmarks/checked-arith/src/: main.rs
benchmarks/fx-chain/: Cargo.toml
benchmarks/fx-chain/src/: main.rs
benchmarks/price-lookup/: Cargo.toml
benchmarks/price-lookup/src/: main.rs
crates/calce-api/: CLAUDE.md  Cargo.toml
crates/calce-api/src/: auth.rs  db_simulator.rs  error.rs  main.rs  rate_limit.rs  routes.rs  seed.rs  simulator.rs  state.rs
crates/calce-api/src/routes/: api_keys.rs  auth.rs  calc.rs  db_simulator.rs  events.rs  mod.rs  simulator.rs  users.rs
crates/calce-cdc/: Cargo.toml
crates/calce-cdc/src/: lib.rs  listener.rs  protocol.rs  wire.rs
crates/calce-cdc/tests/: e2e.rs
crates/calce-core/: CLAUDE.md  Cargo.toml
crates/calce-core/src/: auth.rs  engine.rs  error.rs  inputs.rs  lib.rs  outcome.rs  permissions.rs  snapshot.rs
crates/calce-core/src/accounting/: balance.rs
crates/calce-core/src/calc/: aggregation.rs  allocation.rs  market_value.rs  mod.rs  value_change.rs  volatility.rs
crates/calce-core/src/domain/: account.rs  currency.rs  fx_rate.rs  instrument.rs  mod.rs  money.rs  position.rs  price.rs  quantity.rs  trade.rs  user.rs
crates/calce-core/src/reports/: portfolio.rs
crates/calce-core/src/services/: market_data.rs  mod.rs  test_market_data.rs  user_data.rs
crates/calce-core/tests/: integration_test.rs
crates/calce-data/: CLAUDE.md  Cargo.toml
crates/calce-data/migrations/: 002_add_user_name.sql
crates/calce-data/src/: auth.rs  cdc.rs  concurrent_market_data.rs  config.rs  error.rs  in_memory_market_data.rs  in_memory_user_data.rs  lib.rs  loader.rs  market_data_builder.rs  market_data_store.rs  permissions.rs  service.rs  types.rs  user_data_store.rs
crates/calce-data/src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs  password.rs  tokens.rs
crates/calce-data/src/backend/: in_memory.rs  mod.rs  njorda.rs  postgres.rs
crates/calce-data/src/njorda/: bin.rs  cache.rs  mod.rs  repo.rs  types.rs
crates/calce-data/src/queries/: auth.rs  market_data.rs  mod.rs  user_data.rs
crates/calce-data/src/repo/: market_data.rs  user_data.rs
crates/calce-datastructs/: Cargo.toml
crates/calce-datastructs/src/: pubsub.rs
crates/calce-ds/: Cargo.toml
crates/calce-ds/src/: cache.rs  lib.rs  pubsub.rs
crates/calce-integrations/: Cargo.toml
crates/calce-integrations/src/njorda/: cache.rs  mod.rs
crates/calce-python/: Cargo.toml  pyproject.toml
crates/calce-python/examples/: db_portfolio_report.py  db_portfolio_value.py  db_search_and_prices.py  portfolio_report.py  portfolio_value.py  volatility.py
crates/calce-python/src/: auth.rs  data_service.rs  data_types.rs  domain.rs  engine.rs  errors.rs  lib.rs  results.rs  services.rs
crates/calce-python/tests/: test_domain.py  test_engine.py  test_errors.py  test_services.py
docs/: architecture.md  auth.md  data_modeling.md  live-updates.md  rust-guidelines.md
docs/calculations/: methodology.md
docs/working-notes/: README.md  arch-cleanup.md  status.md
services/calce-ai/: pyproject.toml
services/calce-ai/calce_ai/: __main__.py  app.py  auth.py  formatting.py  tools.py
services/calce-ai/calce_ai/static/: app.js  index.html  style.css
services/calce-console/: CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
services/calce-console/e2e/: console.spec.ts  fx-rates.spec.ts
services/calce-console/src/: App.tsx  main.tsx
services/calce-console/src/api/: client.ts  types.ts
services/calce-console/src/auth/: AuthContext.tsx
services/calce-console/src/components/: Badge.tsx  Breadcrumbs.tsx  Button.tsx  Card.tsx  DataTable.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Pagination.tsx  PriceChart.tsx  SearchInput.tsx  Sidebar.tsx  Spinner.tsx  StatCard.tsx  Tabs.tsx  ThemeToggle.tsx  icons.tsx
services/calce-console/src/design/: components.css  reset.css  tokens.css
services/calce-console/src/hooks/: useEntityEvents.ts  useEventBuffer.ts  useEventSource.ts  usePageTitle.ts  usePaginatedSearch.ts
services/calce-console/src/layouts/: AppLayout.tsx
services/calce-console/src/pages/: DashboardPage.tsx  DesignComponentsPage.tsx  DesignExamplesPage.tsx  DesignSystemPage.tsx  FxRateDetailPage.tsx  FxRatesPage.tsx  InstrumentDetailPage.tsx  InstrumentsPage.tsx  LoginPage.tsx  NotFoundPage.tsx  OrganizationDetailPage.tsx  OrganizationsPage.tsx  SimulatorPage.tsx  UpdateSimulatorPage.tsx  UserDetailPage.tsx  UsersPage.tsx
services/calce-db/: alembic.ini  pyproject.toml
services/calce-db/alembic/: env.py
services/calce-db/alembic/versions/: 0001_initial_schema.py  0002_add_allocations_jsonb.py  0003_add_organizations.py  0004_add_auth_tables.py  0005_add_api_keys.py  0006_add_users_to_cdc_publication.py
services/calce-db/calce_db/: config.py  models.py
src/: context.rs  error.rs  lib.rs
src/calc/: aggregation.rs  engine.rs  market_value.rs  mod.rs
src/domain/: currency.rs  fx_rate.rs  instrument.rs  mod.rs  money.rs  price.rs  quantity.rs  trade.rs  user.rs
src/services/: mod.rs  user_data.rs
tools/: api-explorer.html  bench.sh  dev_admin.py  njorda_import.py  seed_db.py  smoke_test.sh
tools/cache-bench/: Cargo.toml
tools/cache-bench/src/: main.rs
working_docs/: BACKLOG.md  auth-implementation-plan.md  console-frontend-fixes.md  dev-guide.md  njorda_import_plan.md  old-calculation-engine-review.md  sector-allocation-plan.md
