[workspace]
members = ["crates/calce-core", "crates/calce-ds", "crates/calce-data", "crates/calce-integrations", "crates/calce-python", "crates/calce-api"]
default-members = ["crates/calce-core", "crates/calce-ds", "crates/calce-data", "crates/calce-integrations", "crates/calce-api"]
resolver = "3"
