[workspace]
members = ["crates/calce-core", "crates/calce-datastructs", "crates/calce-data", "crates/calce-cdc", "crates/calce-python", "crates/calce-api"]
default-members = ["crates/calce-core", "crates/calce-datastructs", "crates/calce-data", "crates/calce-cdc", "crates/calce-api"]
resolver = "3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.lints]
rust.warnings = "deny"
