[package]
name = "calce-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "calce-api"
path = "src/main.rs"

[dependencies]
calce-core = { path = "../calce-core", features = ["serde"] }
calce-data = { path = "../calce-data" }
calce-datastructs = { path = "../calce-datastructs" }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
uuid = { version = "1", features = ["v4"] }
governor = "0.8"
dotenvy = "0.15"
rand = "0.8"

[lints]
workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
