[package]
name = "calce-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde", "chrono/serde"]

[dependencies]
rust_decimal = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
rust_decimal_macros = "1"
