[package]
name = "calce-data"
version = "0.1.0"
edition = "2024"

[dependencies]
calce-core = { path = "../calce-core", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
serde_json = "1.0.149"
