[package]
name = "calce-data"
version = "0.1.0"
edition = "2024"

[dependencies]
calce-core = { path = "../calce-core", features = ["serde"] }
calce-datastructs = { path = "../calce-datastructs" }
dashmap = "6"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "uuid"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
serde_json = "1.0.149"
jsonwebtoken = "9"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
ring = "0.17"
uuid = { version = "1", features = ["v4"] }
moka = { version = "0.12", features = ["future"] }

[lints]
workspace = true
