[package]
name = "calce-datastructs"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6"
arc-swap = "1"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
rustc-hash = "2"
tracing = "0.1"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
