[package]
name = "cache-bench"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
bincode = { version = "2", features = ["serde"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
lz4_flex = "0.11"
zstd = "0.13"
